@@ -1,7 +1,6 @@
 ---
 name: Parallel-Iterator
 version: 0.3.0
-
 author:
   - 'Andy Armstrong <andy@hexten.net>'
 abstract: Simple parallel execution
@@ -19,7 +18,6 @@ provides:
   Parallel::Iterator:
     file: lib/Parallel/Iterator.pm
     version: 0.3.0
-
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
