@@ -1,3 +1,4 @@
+# $Id$
 use Test::More tests => 1;
 
 BEGIN {
